# RealSenseServer

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cc
RS/: RSHelper.cpp  RSHelper.h  Timer.h
controllers/: api_frame.cc  api_frame.h
plugins/: RealSenseSDK.cc  RealSenseSDK.h
test/: CMakeLists.txt
